# MLPitchDetector

./: CMakeLists.txt  README.md
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: PitchDetector.cpp  PitchDetector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
